# perception_engine

./: .env.example  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  GIT_LFS_SETUP.md  QUICK_START.md  README.md  SETUP_GUIDE.md  SETUP_SUMMARY.md  SETUP_VALIDATION.md  TECH_STACK.md  download_models_windows.py  mac_camera_yolo.py  mac_screen.py  mac_screen_v5.py  mac_voice_stream.py  requirements.txt  requirements_windows.txt  server.py  setup.bat  setup.ps1  start_windows_perception.bat  test_screen.py  win_audio_asr.py  win_camera_fastvlm_fast.py  win_camera_vision.py  win_screen_ocr.py
.claude/: settings.local.json
android/: ANDROID_TECH_STACK.md
archive/camera_experiments/: win_camera_fastvlm.py  win_camera_smolvlm.py  win_camera_vision.py
archive/screen_exp/: win_screen_blip.py  win_screen_ocr_easyocr.py  win_screen_ocr_paddle.py
models/camera/: ssd_mobilenet_v3_large_coco.pb  ssd_mobilenet_v3_large_coco.pbtxt
templates/: dashboard.html
windows_code/: AsyncWhisperQueue.cpp  AsyncWhisperQueue.h  AudioCaptureEngine.cpp  AudioCaptureEngine.h  CMakeLists.txt  CMakePresets.json  CameraVisionEngine.cpp  CameraVisionEngine.h  ContextCollector.cpp  ContextCollector.h  FastVLMTokenizer.cpp  FastVLMTokenizer.h  HttpServer.cpp  HttpServer.h  PerceptionEngine.cpp  PerceptionEngine.sln  PerceptionEngine.vcxproj  PerceptionEngine.vcxproj.filters  README.md  SileroVAD.cpp  SileroVAD.h  WindowEventMonitor.cpp  WindowEventMonitor.h  WindowsAPIs.cpp  WindowsAPIs.h  WindowsService.cpp  WindowsService.h  build_whisper.bat  build_whisper_msbuild.bat  copy_whisper_lib.bat  dashboard.html  start_perception_engine.bat  test_audio.cpp  test_vision_encoder.cpp  win_camera_fastvlm_pytorch.py
windows_code/x64/Release/: StartEngineAmdin.bat  simple_usage.txt
